--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ html, body, #map {
 
 </style>
 <div id="map"></div>
-<script src="//maps.google.com/maps/api/js?sensor=true"></script>
-<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyAtijSawTOdoLHBiMO-gGfdGCx2QRUwT3s&sensor=true"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
 // Create the Google Map…
