--- a/index.html
+++ b/index.html
@@ -1,95 +1,51 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-<style>
-
-html, body, #map {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.stations, .stations svg {
-  position: absolute;
-}
-
-.stations svg {
-  width: 60px;
-  height: 20px;
-  padding-right: 100px;
-  font: 10px sans-serif;
-}
-
-.stations circle {
-  fill: brown;
-  stroke: black;
-  stroke-width: 1.5px;
-}
-
-</style>
-<div id="map"></div>
-<script src="https://maps.google.com/maps/api/js?key=AIzaSyAtijSawTOdoLHBiMO-gGfdGCx2QRUwT3s&sensor=true"></script>
+<html>
+<head>
+<!--Index file with base table format + links to css and js files-->
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script>
+<link rel="stylesheet" href="styles.css">
+<script src="map.js"></script>
+</head>
+<body>
 
-// Create the Google Map…
-var map = new google.maps.Map(d3.select("#map").node(), {
-  zoom: 14,
-  center: new google.maps.LatLng(45.757481, 4.834621),
-  mapTypeId: google.maps.MapTypeId.roadmap
-});
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtijSawTOdoLHBiMO-gGfdGCx2QRUwT3s">  </script>
+<table>
+<!--Row 1 - title image and colour key-->
 
-// Load the station data. When the data comes back, create an overlay.
-d3.json("bars.json", function(error, data) {
-  if (error) throw error;
+<!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
+<tr>
+  <td colspan='2' id='title'>
+    <input type="radio" id='location'  name="search_option" value="location" checked="checked"><label for="location"> Location </label>&nbsp;&nbsp;
+    <input type="radio" id='dashboard'  name="search_option" value="dashboard"><label for="dashboard"> Dashboard </label>&nbsp;&nbsp;
+    <input type="radio" id='manager' name="search_option" value="manager"><label for="manager"> Manager </label>&nbsp;&nbsp;
+    <input type="radio" id='department'  name="search_option" value="department"><label for="department"> Department </label>&nbsp;&nbsp;
+    <input type="radio" id='group'  name="search_option" value="group"><label for="group"> Group </label>&nbsp;&nbsp;
+  </td>
 
-  var overlay = new google.maps.OverlayView();
 
-  // Add the container when the overlay is added to the map.
-  overlay.onAdd = function() {
-    var layer = d3.select(this.getPanes().overlayLayer).append("div")
-        .attr("class", "stations");
+<!--Row 3 - a break so there is a space inbetween the radio and the charts-->
+<tr>
+  <td colspan='3'></td>
+</tr>
+<!--Row 4 - charts - 4 columns, charts in individual  tables -->
+<tr>
+  <!--list_title - dynamically created checkbox - see effective.js -->
+  <td class='chart_td'>
+    <table class='chart_table'>
+      <tr><td id='list_title'>LOCATION</td></tr>
+      <tr><td id='list_radio'></td><tr>
+    </table>
+  </td>
+  <!--map td and title -->
+  <td class='chart_td'>
+    <table class='chart_table'>
+      <tr><td id='map_title'>LOCATION</td></tr>
+      <tr><td><div id="map"></div>
+</td><tr>
+    </table>
+  </td>
 
-    // Draw each marker as a separate SVG element.
-    // We could use a single SVG, but what size would it have?
-    overlay.draw = function() {
-      var projection = this.getProjection(),
-          padding = 10;
+</tr>
+</table>
 
-      var marker = layer.selectAll("svg")
-          .data(d3.entries(data))
-          .each(transform) // update existing markers
-        .enter().append("svg")
-          .each(transform)
-          .attr("class", "marker");
-
-      // Add a circle.
-      marker.append("circle")
-          .attr("r", 4.5)
-          .attr("cx", padding)
-          .attr("cy", padding);
-
-      // Add a label.
-     // marker.append("text")
-     //     .attr("x", padding + 7)
-     //     .attr("y", padding)
-     //     .attr("dy", ".31em")
-     //     .text(function(d) { return d.value.Nom; });
-
-      function transform(d) {
-        console.log(d.value.Nom)
-        d = new google.maps.LatLng(d.value.lat, d.value.long);
-        d = projection.fromLatLngToDivPixel(d);
-        return d3.select(this)
-            .style("left", (d.x - padding) + "px")
-            .style("top", (d.y - padding) + "px");
-      }
-    };
-  };
-
-  // Bind our overlay to the map…
-  overlay.setMap(map);
-});
-
-</script>
+</body>
+</html>
