Minor changes (colors / titles...) Still waiting for the data to link the id from the csv / json to the html.
At least I'm here.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtijSawTOdoLHBiMO-gGfdGCx2QRUwT3s">  </script>
 <table>
 <!--Row 1 - title image and colour key-->
-
+<img src="img_girl.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
 <!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
 <tr>
   <td colspan='2' id='title'>
-    <input type="radio" id='location'  name="search_option" value="location" checked="checked"><label for="location"> Location </label>&nbsp;&nbsp;
-    <input type="radio" id='dashboard'  name="search_option" value="dashboard"><label for="dashboard"> Dashboard </label>&nbsp;&nbsp;
+    <input type="radio" id='location'  name="search_option" value="location" checked="checked"><label for="location"> Localisation </label>&nbsp;&nbsp;
+    <input type="radio" id='dashboard'  name="search_option" value="dashboard"><label for="dashboard"> Type </label>&nbsp;&nbsp;
     <input type="radio" id='manager' name="search_option" value="manager"><label for="manager"> Manager </label>&nbsp;&nbsp;
-    <input type="radio" id='department'  name="search_option" value="department"><label for="department"> Department </label>&nbsp;&nbsp;
-    <input type="radio" id='group'  name="search_option" value="group"><label for="group"> Group </label>&nbsp;&nbsp;
+    <input type="radio" id='department'  name="search_option" value="department"><label for="department"> Prix </label>&nbsp;&nbsp;
+    <input type="radio" id='group'  name="search_option" value="group"><label for="group"> Note </label>&nbsp;&nbsp;
   </td>
 
 
-<!--Row 3 - a break so there is a space inbetween the radio and the charts-->
+<!--Row 3 - a break so there is a space in between the radio and the charts-->
 <tr>
   <td colspan='3'></td>
 </tr>
