--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
 <tr>
   <td colspan='2' id='title'>
-    <input type="radio" id='location'  name="search_option" value="location" checked="checked"><label for="location"> Localisation </label>&nbsp;&nbsp;
-    <input type="radio" id='dashboard'  name="search_option" value="dashboard"><label for="dashboard"> Type </label>&nbsp;&nbsp;
-    <input type="radio" id='manager' name="search_option" value="manager"><label for="manager"> Manager </label>&nbsp;&nbsp;
-    <input type="radio" id='department'  name="search_option" value="department"><label for="department"> Prix </label>&nbsp;&nbsp;
-    <input type="radio" id='group'  name="search_option" value="group"><label for="group"> Note </label>&nbsp;&nbsp;
+    <input type="radio" id='type'  name="search_option" value="type" checked="checked"><label for="type"> Type de Bar </label>&nbsp;&nbsp;
+    <input type="radio" id='arrond'  name="search_option" value="arrond"><label for="arrond"> Arrondissement </label>&nbsp;&nbsp;
+    <input type="radio" id='prixyelp' name="search_option" value="prixyelp"><label for="prixyelp"> Prix Yelp </label>&nbsp;&nbsp;
+    <input type="radio" id='noteyelp'  name="search_option" value="noteyelp"><label for="noteyelp"> Note Yelp </label>&nbsp;&nbsp;
+    <input type="radio" id='valide'  name="search_option" value="valide"><label for="valide"> Visité? </label>&nbsp;&nbsp;
   </td>
 
 
