Minor changes : index.html -> title bar change (because of UTF-8 error) csv -> erreur dans les donées avec le 69017 au lieu de 69007

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="radio" id='arrond'  name="search_option" value="arrond"><label for="arrond"> Arrondissement </label>&nbsp;&nbsp;
     <input type="radio" id='prixyelp' name="search_option" value="prixyelp"><label for="prixyelp"> Prix Yelp </label>&nbsp;&nbsp;
     <input type="radio" id='noteyelp'  name="search_option" value="noteyelp"><label for="noteyelp"> Note Yelp </label>&nbsp;&nbsp;
-    <input type="radio" id='valide'  name="search_option" value="valide"><label for="valide"> Visité? </label>&nbsp;&nbsp;
+    <input type="radio" id='valide'  name="search_option" value="valide"><label for="valide"> Test Paye Ta Planche </label>&nbsp;&nbsp;
   </td>
 
 
