--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <tr>
   <td colspan='2' id='title'>
     <input type="radio" id='type'  name="search_option" value="type" checked="checked"><label for="type"> Type de Bar </label>&nbsp;&nbsp;
-    <input type="radio" id='arrond'  name="search_option" value="arrond"><label for="arrond"> Arrondissement </label>&nbsp;&nbsp;
+    <input type="radio" id='arrond'  name="search_option" value="arrond"><label for="arrond"> Code Postal </label>&nbsp;&nbsp;
     <input type="radio" id='prixyelp' name="search_option" value="prixyelp"><label for="prixyelp"> Prix Yelp </label>&nbsp;&nbsp;
     <input type="radio" id='noteyelp'  name="search_option" value="noteyelp"><label for="noteyelp"> Note Yelp </label>&nbsp;&nbsp;
     <input type="radio" id='valide'  name="search_option" value="valide"><label for="valide"> Test Paye Ta Planche </label>&nbsp;&nbsp;
@@ -30,14 +30,14 @@
   <!--list_title - dynamically created checkbox - see effective.js -->
   <td class='chart_td'>
     <table class='chart_table'>
-      <tr><td id='list_title'>LOCATION</td></tr>
+      <tr><td id='list_title'>LIEUX</td></tr>
       <tr><td id='list_radio'></td><tr>
     </table>
   </td>
   <!--map td and title -->
   <td class='chart_td'>
     <table class='chart_table'>
-      <tr><td id='map_title'>LOCATION</td></tr>
+      <tr><td id='map_title'>LIEUX</td></tr>
       <tr><td><div id="map"></div>
 </td><tr>
     </table>
