--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <!--Index file with base table format + links to css and js files-->
     <script src="https://use.fontawesome.com/1f32ea24a2.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="map.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="map.js"></script>
 
 </head>
 <body>
@@ -30,8 +30,8 @@
             Yelp </label>&nbsp;&nbsp;
             <input type="radio" id='valide' name="search_option" value="valide"><label for="valide"> Test Paye Ta
             Planche </label>&nbsp;&nbsp;
-            <button type="button" class="fa fa-info-circle" data-toggle="modal" data-target="#commentaire"
-                    aria-hidden="true"></button>
+            <a class="fa fa-info-circle" href="" data-toggle="modal" data-target="#commentaire"
+                    aria-hidden="true" style="color: white"></a>
         </td>
 
 
