text-justify in modal poi off

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-justify">
                 Cette carte interactive vous permet de trouver facilement et rapidement les meilleurs bars et bistrots
                 de Lyon. Elle vous permet de les trier par Type, Code Postal, Note, Prix, mais aussi d’avoir les avis de
                 Paye Ta Planche, qui seront de plus en plus nombreux avec le temps.
