Added row 1 (Dataviz title) Update for row 2 names(Select bar) Update for the modal to modal-lg and added some pictures and <p>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtijSawTOdoLHBiMO-gGfdGCx2QRUwT3s"></script>
 <table>
     <!--Row 1 - title image and colour key-->
+    <tr>
+        <td colspan='2' id='title-dataviz' >
+            <p> Les meilleurs bars de Lyon</p>
+    </tr>
     <!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
     <tr>
         <td colspan='2' id='title'>
