row 1 with logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <tr>
         <td colspan='2' id='title-dataviz' >
             <p> Les meilleurs bars de Lyon</p>
+        </td>
+        <td rowspan="2" id="title-img">
+            <img src="https://i.imgur.com/sB7MMLo.jpg" class="rounded-img" alt="logo paye ta planche">
+        </td>
     </tr>
     <!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
     <tr>
