Replaced title (text) by picture. Added link to rounded logo

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <!--Row 1 - title image and colour key-->
     <tr>
         <td colspan='2' id='title-dataviz' >
-            <p> Les meilleurs bars de Lyon</p>
+            <img src="https://i.imgur.com/Q8yaA4X.png" class="img-fluid" alt="Les meilleurs bars de Lyon">
         </td>
         <td rowspan="2" id="title-img">
-            <img src="https://i.imgur.com/sB7MMLo.jpg" class="rounded-img" alt="logo paye ta planche">
+            <a href="https://payetaplanche.fr/">
+                <img src="https://i.imgur.com/sB7MMLo.jpg" class="rounded-img" alt="logo paye ta planche">
+            </a>
         </td>
     </tr>
     <!--Row 2 - search option radio buttons (buttons hidden, labels instead)-->
