Resized title picture Removed "Lieux" on top of the map

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Row 1 - title image and colour key-->
     <tr>
         <td colspan='2' id='title-dataviz' >
-            <img src="https://i.imgur.com/Q8yaA4X.png" class="img-fluid" alt="Les meilleurs bars de Lyon">
+            <img src="https://i.imgur.com/Q8yaA4X.png" width="70%" class="img-fluid" alt="Les meilleurs bars de Lyon">
         </td>
         <td rowspan="2" id="title-img">
             <a href="https://payetaplanche.fr/">
@@ -58,9 +58,6 @@
         <!--map td and title -->
         <td class='chart_td'>
             <table class='chart_table'>
-                <tr>
-                    <td id='map_title'>LIEUX</td>
-                </tr>
                 <tr>
                     <td>
                         <div id="map"></div>
