Resized title picture Removed "Lieux" on top of the map Added another logo to center the title and title bar for selection

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <table>
     <!--Row 1 - title image and colour key-->
     <tr>
-        <td colspan='2' id='title-dataviz' >
+        <td rowspan="2" id="title-img">
+            <a href="https://payetaplanche.fr/">
+                <img src="https://i.imgur.com/sB7MMLo.jpg" class="rounded-img" alt="logo paye ta planche">
+            </a>
+        </td>
+        <td colspan='2' id='title-dataviz'>
             <img src="https://i.imgur.com/Q8yaA4X.png" width="70%" class="img-fluid" alt="Les meilleurs bars de Lyon">
         </td>
         <td rowspan="2" id="title-img">
